clientAPIの作成
