# openapi.yml
@@ -282,16 +282,16 @@ paths:
                     car_id:
                       type: integer
                       example: 1
-                    tuning_name:
-                      type: string
-                      example: "Engine Tuning"
                     tuning_date:
                       type: string
                       format: date-time
                       example: "2023-07-01T10:20:30Z"
+                    tuning_name:
+                      type: string
+                      example: "エンジンオイル交換"
                     tuning_description:
                       type: string
-                      example: "Improved engine performance"
+                      example: "エンジンオイルを新しいものに交換しました。"
                     created_at:
                       type: string
                       format: date-time
@@ -303,185 +303,80 @@ paths:
               example:
                 - tuning_id: 1
                   car_id: 1
-                  tuning_name: "Engine Tuning"
-                  tuning_date: "2023-07-01T10:20:30Z"
-                  tuning_description: "Improved engine performance"
-                  created_at: "2023-07-01T10:20:30Z"
-                  updated_at: "2023-07-01T10:20:30Z"
+                  tuning_date: "2023-07-01"
+                  tuning_name: "エンジンオイル交換"
+                  tuning_description: "エンジンオイルを新しいものに交換しました。"
+                  created_at: "2023-07-01"
+                  updated_at: "2023-07-01"
                 - tuning_id: 2
                   car_id: 1
-                  tuning_name: "Suspension Tuning"
-                  tuning_date: "2023-07-02T10:20:30Z"
-                  tuning_description: "Upgraded suspension system"
-                  created_at: "2023-07-02T10:20:30Z"
-                  updated_at: "2023-07-02T10:20:30Z"
-  /tunings:
-    post:
-      summary: Create a new tuning record
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                car_id:
-                  type: integer
-                  example: 1
-                tuning_name:
-                  type: string
-                  example: "Engine Tuning"
-                tuning_date:
-                  type: string
-                  format: date-time
-                  example: "2023-07-01T10:20:30Z"
-                tuning_description:
-                  type: string
-                  example: "Improved engine performance"
-      responses:
-        "200":
-          description: Successfully created a new tuning record
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  tuning_id:
-                    type: integer
-                    example: 1
-                  car_id:
-                    type: integer
-                    example: 1
-                  tuning_name:
-                    type: string
-                    example: "Engine Tuning"
-                  tuning_date:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  tuning_description:
-                    type: string
-                    example: "Improved engine performance"
-                  created_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  updated_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-  /tunings/{tuning_id}:
+                  tuning_date: "2023-07-02"
+                  tuning_name: "ブレーキパッド交換"
+                  tuning_description: "ブレーキパッドを新しいものに交換しました。"
+                  created_at: "2023-07-02"
+                  updated_at: "2023-07-02"
+  /users/{user_id}/cars/{car_id}/maintenance:
     get:
-      summary: Get a tuning record by ID
+      summary: Get all maintenances for a specific car associated with a user
       parameters:
         - in: path
-          name: tuning_id
+          name: user_id
           required: true
           schema:
-            type: integer
-          description: Tuning ID
+            type: string
+          description: User ID
+        - in: path
+          name: car_id
+          required: true
+          schema:
+            type: string
+          description: Car ID
       responses:
         "200":
-          description: A tuning record
+          description: A list of maintenances
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  tuning_id:
-                    type: integer
-                    example: 1
-                  car_id:
-                    type: integer
-                    example: 1
-                  tuning_name:
-                    type: string
-                    example: "Engine Tuning"
-                  tuning_date:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  tuning_description:
-                    type: string
-                    example: "Improved engine performance"
-                  created_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  updated_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-    put:
-      summary: Update a tuning record by ID
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                car_id:
-                  type: integer
-                  example: 1
-                tuning_name:
-                  type: string
-                  example: "Engine Tuning"
-                tuning_date:
-                  type: string
-                  format: date-time
-                  example: "2023-07-01T10:20:30Z"
-                tuning_description:
-                  type: string
-                  example: "Improved engine performance"
-      parameters:
-        - in: path
-          name: tuning_id
-          required: true
-          schema:
-            type: integer
-          description: Tuning ID
-      responses:
-        "200":
-          description: Successfully updated the tuning record
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  tuning_id:
-                    type: integer
-                    example: 1
-                  car_id:
-                    type: integer
-                    example: 1
-                  tuning_name:
-                    type: string
-                    example: "Engine Tuning"
-                  tuning_date:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  tuning_description:
-                    type: string
-                    example: "Improved engine performance"
-                  created_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-                  updated_at:
-                    type: string
-                    format: date-time
-                    example: "2023-07-01T10:20:30Z"
-    delete:
-      summary: Delete a tuning record by ID
-      parameters:
-        - in: path
-          name: tuning_id
-          required: true
-          schema:
-            type: integer
-          description: Tuning ID
-      responses:
-        "200":
-          description: Successfully deleted the tuning record
+                type: array
+                items:
+                  type: object
+                  properties:
+                    maint_id:
+                      type: integer
+                      example: 1
+                    car_id:
+                      type: integer
+                      example: 1
+                    maint_date:
+                      type: string
+                      format: date-time
+                      example: "2023-07-01T10:20:30Z"
+                    maint_type:
+                      type: string
+                      example: "エンジンオイル交換"
+                    maint_description:
+                      type: string
+                      example: "エンジンオイルを新しいものに交換しました。"
+                    created_at:
+                      type: string
+                      format: date-time
+                      example: "2023-07-01T10:20:30Z"
+                    updated_at:
+                      type: string
+                      format: date-time
+                      example: "2023-07-01T10:20:30Z"
+              example:
+                - maint_id: 1
+                  car_id: 1
+                  maint_date: "2023-07-01"
+                  maint_type: "エンジンオイル交換"
+                  maint_description: "エンジンオイルを新しいものに交換しました。"
+                  created_at: "2023-07-01"
+                  updated_at: "2023-07-01"
+                - maint_id: 2
+                  car_id: 1
+                  maint_date: "2023-07-02"
+                  maint_type: "ブレーキパッド交換"
+                  maint_description: "ブレーキパッドを新しいものに交換しました。"
+                  created_at: "2023-07-02"
+                  updated_at: "2023-07-02"
